applications/photoprism/20-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photos-wesl-io-deployment
  namespace: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos-wesl-io
  template:
    metadata:
      labels:
        app: photos-wesl-io
    spec:
      containers:
        - name: photos-wesl-io-site
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /photoprism/originals
              name: photos-wesl-io-photos
            - mountPath: /photoprism/storage
              name: photos-wesl-io-storage
      volumes:
        - name: photos-wesl-io-photos
          hostPath:
            path: /tank/media/photos
            type: Directory
        - name: photos-wesl-io-storage
          hostPath:
            path: /tank/cluster/local/photoprism
            type: Directory
