applications/photoprism/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photos-wesl-io-svc
spec:
  selector:
    app: photos-wesl-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
