applications/photoprism/service.yml
apiVersion: v1
kind: Service
metadata:
  name: photos-wesl-io-svc
  namespace: photoprism
spec:
  selector:
    app: photos-wesl-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
