applications/photoprism/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photos-wesl-io-ingress-route
  namespace: photoprism
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.wesl.io`)
      kind: Rule
      services:
        - name: photos-wesl-io-svc
          port: 80
